Added logic for non-transfer no-split entry.

--- a/app/views/dashboard/_spending_filtered.html.erb
+++ b/app/views/dashboard/_spending_filtered.html.erb
@@ -1,4 +1,4 @@
-<div id="spending-breakdown" class="form-container3">
+<div id="spending-filtered" class="form-container3">
   <div class="form-container4">
     <h2>Spending Breakdown</h2>
     <table class="table">
