--- a/app/views/dashboard/_piechart.html.erb
+++ b/app/views/dashboard/_piechart.html.erb
@@ -1,4 +1,4 @@
-<div id="transfer-slide-out" class="form-container1">
+<div id="pie-chart" class="form-container1">
   <div class="form-container2">
     <h2>Spending Breakdown</h1>
     <%= pie_chart chart_array %>
