--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -7,7 +7,7 @@
       <div class="col">
         <%= render 'mentries/form', mentry: @mentry %>
       </div>
-      <div class="col" id="pie-chart">
+      <div class="col">
         <%= render 'dashboard/piechart' %>
         <div class="white-space">
 
