--- a/app/views/mentries/_form.html.erb
+++ b/app/views/mentries/_form.html.erb
@@ -23,9 +23,7 @@
                 <%= form.text_field :amount, class: 'first-amount' %>
               </div>
 
-              <div class="">
-
-
+              <div>
                 <p>
                   Split:
                     <%= form.label :yes, "Yes" %>
