--- a/app/views/dashboard/_spending.html.erb
+++ b/app/views/dashboard/_spending.html.erb
@@ -11,20 +11,24 @@
       <tbody class="table-row">
           <% cat_not_zero.each do |mcategory| %>
             <tr>
+              <% if mcategory.name != 'n/a' %>
                 <th scope="row">
                   <%= link_to mcategory.name, mcategory_path(mcategory.id) %>
                 </th>
                   <% total = 0 %>
                   <% mcategory.mentries.each do |entry| %>
-                    <% if entry.mtype.name != 'transfer' %>
-                      <% if entry.mcategory.name != 'paycheck' %>
-                    <% total += entry.amount %>
-                      <% end %>
+                    <% if current_user.id == entry.user_id %>
+                        <% if entry.mtype.name != 'transfer' %>
+                          <% if entry.mcategory.name != 'paycheck' %>
+                            <% total += entry.amount %>
+                          <% end %>
+                        <% end %>
                     <% end %>
                   <% end %>
                 <th scope="row">
                     <%= number_to_currency(total * -1) %>
                 </th>
+              <% end %>
             <% end %>
             </tr>
       </tbody>
