Displayed error messages on dashboard when entry form is incomplete.

--- a/app/views/dashboard/index.js.erb
+++ b/app/views/dashboard/index.js.erb
@@ -1,2 +1,2 @@
-alert('hi');
-$('#spending-breakdown').replaceWith("<%= j render 'dashboard/spending_filtered' %>");
+alert('<%= j @mentry.errors.full_messages[0] %>');
+$('.notice').html('<%= j render "dashboard/errors" %>')
