--- a/app/views/dashboard/index.js.erb
+++ b/app/views/dashboard/index.js.erb
@@ -1,2 +1,4 @@
-alert('<%= j @mentry.errors.full_messages[0] %>');
-$('.notice').html('<%= j render "dashboard/errors" %>')
+
+$('.notice').html('<%= j render "dashboard/errors" %>');
+
+$('.modal').show();
