--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -93,3 +93,8 @@ h2 {
   font-size: 14px;
   line-height: 18px;
 }
+
+.modal-content {
+  box-shadow: 0px 0px 16px 0px #888;
+  border-radius: 8px;
+}
