--- a/app/views/dashboard/_errors.html.erb
+++ b/app/views/dashboard/_errors.html.erb
@@ -1,3 +1,40 @@
-<% @mentry.errors.full_messages.each do |message| %>
-  <%= message %>
-<% end %>
+<div class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Your entry cannot be created due to the following errors:</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+            <% @mentry.errors.full_messages.each do |message| %>
+                  <% if message == "Maccount must exist" %>
+                        <p>You must choose an account before creating an entry.</p>
+                  <% elsif message == "Mcategory must exist" %>
+                        <p>You must choose a category before creating an entry.</p>
+                  <% elsif message == "Mlocation must exist" %>
+                        <p>You must choose a location before creating an entry.</p>
+                  <% elsif message == "Mtype must exist" %>
+                        <p>You must choose a type before creating an entry.</p>
+                  <% elsif message == "Mstatus must exist" %>
+                        <p>You must choose a status before creating an entry.</p>
+                  <% elsif message == "Amount is not a number" %>
+                        <p>You must enter an amount as an integer before creating an entry.</p>
+                  <% end %>
+            <% end %>
+
+      </div>
+      <div class="modal-footer close-error-modal">
+        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+        <button type="button" class="btn btn-primary" id="close-error-modal" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script type="text/javascript">
+$('#close-error-modal').click(function() {
+    $('.modal').hide();
+});
+</script>
