Worked on transfer to logic.

--- a/app/views/mentries/_split.html.erb
+++ b/app/views/mentries/_split.html.erb
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="actions">
-                  <%= form.submit "Create Entry" %>
+                  <%= form.submit "Create Entry", class: 'btn btn-outline-success my-2 my-sm-0'%>
                 </div>
             <% end %>
           <% end %>
