--- a/app/views/dashboard/show.js.erb
+++ b/app/views/dashboard/show.js.erb
@@ -15,7 +15,8 @@ var select_location = $('#mentry_mlocation_id').val();
 if (select_transfer == 2 && split_button_no == "true") {
   alert("Number 1");
   $('#transfer-slide-out').replaceWith("<%= j render 'mentries/transfer' %>");
-  $('#mentry_amount').val(select_amount * -1);
+  $('#mentry_amount').val(select_amount);
+  $('#mentry_mtype_id').val(3);
   $('#mentry_mstatus_id').val(select_status);
   $('#mentry_maccount_id').val(select_account);
   $('#mentry_mcategory_id').val(select_category);
@@ -24,6 +25,14 @@ if (select_transfer == 2 && split_button_no == "true") {
   $('#spending-breakdown').replaceWith("<%= j render 'dashboard/spending' %>");
   $('#pie-chart').replaceWith("<%= j render 'dashboard/piechart' %>");
 }
+
+else if (select_transfer == 3  && split_button_no == "true") {
+  $('#transfer-slide-out').replaceWith("<%= j render 'mentries/form' %>");
+  $('#maccount-balances').replaceWith("<%= j render 'dashboard/maccount_balances' %>");
+  $('#spending-breakdown').replaceWith("<%= j render 'dashboard/spending' %>");
+  $('#pie-chart').replaceWith("<%= j render 'dashboard/piechart' %>");
+}
+
 // If not transferring / not splitting:
 else if (select_transfer != 3  && split_button_no == "true") {
   // alert("number 2");
