Fixed logic so that transfers and deposits don't show in spending breakdown.

--- a/app/views/dashboard/show.js.erb
+++ b/app/views/dashboard/show.js.erb
@@ -13,7 +13,7 @@ var select_location = $('#mentry_mlocation_id').val();
 // New Entry Logic
 // If transferring from one account/category to another / and not splitting:
 if (select_transfer == 2 && split_button_no == "true") {
-  alert("Number 1");
+  // alert("Number 1");
   $('#transfer-slide-out').replaceWith("<%= j render 'mentries/transfer' %>");
   $('#mentry_amount').val(select_amount);
   $('#mentry_mtype_id').val(3);
@@ -27,6 +27,7 @@ if (select_transfer == 2 && split_button_no == "true") {
 }
 
 else if (select_transfer == 3  && split_button_no == "true") {
+  alert("number 2");
   $('#transfer-slide-out').replaceWith("<%= j render 'mentries/form' %>");
   $('#maccount-balances').replaceWith("<%= j render 'dashboard/maccount_balances' %>");
   $('#spending-breakdown').replaceWith("<%= j render 'dashboard/spending' %>");
@@ -35,7 +36,7 @@ else if (select_transfer == 3  && split_button_no == "true") {
 
 // If not transferring / not splitting:
 else if (select_transfer != 3  && split_button_no == "true") {
-  // alert("number 2");
+  alert("number 3");
   $('#mentry_amount').val(0);
   // $('#transfer-btn').replaceWith('');
   // $('#transfer-slide-out').replaceWith("<%= j render 'mentries/form' %>");
@@ -47,7 +48,7 @@ else if (select_transfer != 3  && split_button_no == "true") {
   // });
 }
 else if (select_transfer != 3  && split_button_yes == "true") {
-  alert("Number 3");
+  alert("Number 4");
   // $('#transfer-slide-out').replaceWith("<%= j render 'mentries/postSplitForm' %>");
   $('#transfer-slide-out').replaceWith("<%= j render 'mentries/form' %>");
   $('#maccount-balances').replaceWith("<%= j render 'dashboard/maccount_balances' %>");
