--- a/app/views/dashboard/_spending.html.erb
+++ b/app/views/dashboard/_spending.html.erb
@@ -17,9 +17,13 @@
                   <% total = 0 %>
                   <% mcategory.mentries.each do |entry| %>
                     <% if current_user.id == entry.user_id %>
-                        <% if entry.mtype.name != 'transfer' %>
-                          <% if entry.mcategory.name != 'paycheck' %>
-                            <% total += entry.amount %>
+                        <% if entry.mtype.name != 'transfer from' %>
+                          <% if entry.mtype.name != 'transfer to' %>
+                            <% if entry.mtype.name != 'deposit' %>
+                              <% if entry.mcategory.name != 'paycheck' %>
+                                <% total += entry.amount %>
+                              <% end %>
+                            <% end %>
                           <% end %>
                         <% end %>
                     <% end %>
@@ -27,7 +31,7 @@
                 <th scope="row">
                     <%= number_to_currency(total * -1) %>
                 </th>
-              
+
             <% end %>
             </tr>
       </tbody>
