--- a/app/views/mentries/_form.html.erb
+++ b/app/views/mentries/_form.html.erb
@@ -33,39 +33,41 @@
                 </p>
               </div>
 
-              <div class="field">
-                <%= form.label :date %>
-                <%= form.date_select :date %>
-              </div>
+              <div id="split-entry">
+                <div class="field">
+                  <%= form.label :date %>
+                  <%= form.date_select :date %>
+                </div>
 
-              <div class="field">
-                <%= form.label :mstatus, "Status" %>
-                <%= form.select :mstatus_id, mstatuses_dropdown, include_blank: :true %>
-              </div>
+                <div class="field">
+                  <%= form.label :mstatus, "Status" %>
+                  <%= form.select :mstatus_id, mstatuses_dropdown, include_blank: :true %>
+                </div>
 
-              <div class="field">
-                <%= form.label :mtype, "Type" %>
-                <%= form.select :mtype_id, mtypes_dropdown, include_blank: :true, id: 'transfer' %>
-              </div>
+                <div class="field">
+                  <%= form.label :mtype, "Type" %>
+                  <%= form.select :mtype_id, mtypes_dropdown, include_blank: :true, id: 'transfer' %>
+                </div>
 
-              <div class="field">
-                <%= form.label :maccount, "Account" %>
-                <%= form.select :maccount_id, maccounts_dropdown, include_blank: :true %>
-              </div>
+                <div class="field">
+                  <%= form.label :maccount, "Account" %>
+                  <%= form.select :maccount_id, maccounts_dropdown, include_blank: :true %>
+                </div>
 
-              <div class="field">
-                <%= form.label :mcategory, "Category" %>
-                <%= form.select :mcategory_id, mcategories_dropdown, include_blank: :true %>
-              </div>
+                <div class="field">
+                  <%= form.label :mcategory, "Category" %>
+                  <%= form.select :mcategory_id, mcategories_dropdown, include_blank: :true %>
+                </div>
 
-              <div class="field">
-                <%= form.label :mlocation, "Location" %>
-                <%= form.select :mlocation_id, mlocations_dropdown, include_blank: :true %>
-              </div>
+                <div class="field">
+                  <%= form.label :mlocation, "Location" %>
+                  <%= form.select :mlocation_id, mlocations_dropdown, include_blank: :true %>
+                </div>
 
-              <div class="field">
-                <%= form.label :note %>
-                <%= form.text_area :note %>
+                <div class="field">
+                  <%= form.label :note %>
+                  <%= form.text_area :note %>
+                </div>
               </div>
 
               <div class="actions">
