--- a/app/views/dashboard/show.js.erb
+++ b/app/views/dashboard/show.js.erb
@@ -12,11 +12,11 @@ var select_location = $('#mentry_mlocation_id').val();
 
 // New Entry Logic
 // If transferring from one account/category to another / and not splitting:
-if (select_transfer == 2 && split_button_no == "true") {
+if (select_transfer == 3) {
   alert("Number 1");
   $('#transfer-slide-out').replaceWith("<%= j render 'mentries/transfer' %>");
   $('#mentry_amount').val(select_amount);
-  $('#mentry_mtype_id').val(3);
+  $('#mentry_mtype_id').val(4);
   $('#mentry_mstatus_id').val(select_status);
   $('#mentry_maccount_id').val(select_account);
   $('#mentry_mcategory_id').val(select_category);
@@ -26,7 +26,7 @@ if (select_transfer == 2 && split_button_no == "true") {
   $('#pie-chart').replaceWith("<%= j render 'dashboard/piechart' %>");
 }
 
-else if (select_transfer == 3  && split_button_no == "true") {
+else if (select_transfer == 4) {
   alert("number 2");
   $('#transfer-slide-out').replaceWith("<%= j render 'mentries/form' %>");
   $('#maccount-balances').replaceWith("<%= j render 'dashboard/maccount_balances' %>");
@@ -35,7 +35,7 @@ else if (select_transfer == 3  && split_button_no == "true") {
 }
 
 // If not transferring / not splitting:
-else if (select_transfer != 3  && split_button_no == "true") {
+else {
   alert("number 3");
   $('#mentry_amount').val(0);
   $('#maccount-balances').replaceWith("<%= j render 'dashboard/maccount_balances' %>");
@@ -43,10 +43,18 @@ else if (select_transfer != 3  && split_button_no == "true") {
   $('#pie-chart').replaceWith("<%= j render 'dashboard/piechart' %>");
 }
 
-else if (select_transfer != 3  && split_button_yes == "true") {
-  alert("Number 4");
-  $('#transfer-slide-out').replaceWith("<%= j render 'mentries/form' %>");
-  $('#maccount-balances').replaceWith("<%= j render 'dashboard/maccount_balances' %>");
-  $('#spending-breakdown').replaceWith("<%= j render 'dashboard/spending' %>");
-  $('#pie-chart').replaceWith("<%= j render 'dashboard/piechart' %>");
-}
+// else if (select_transfer != 3  && split_button_yes == "true") {
+//   alert("Number 4");
+//   $('#transfer-slide-out').replaceWith("<%= j render 'mentries/postSplitForm' %>");
+//   $('#mentry_amount').val('');
+//   $('#mentry_mtype_id').val(3);
+//   $('#mentry_mstatus_id').val(select_status);
+//   $('#split-amount').html(split_amount);
+//   $('#mentry_maccount_id').val(select_account);
+//   $('#mentry_mcategory_id').val(select_category);
+//   $('#mentry_mlocation_id').val(select_location);
+//   $('#mentry_entry_id').val(select_entry_id);
+//   $('#maccount-balances').replaceWith("<%= j render 'dashboard/maccount_balances' %>");
+//   $('#spending-breakdown').replaceWith("<%= j render 'dashboard/spending' %>");
+//   $('#pie-chart').replaceWith("<%= j render 'dashboard/piechart' %>");
+// }
