--- a/app/views/mcategories/new.html.erb
+++ b/app/views/mcategories/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Category</h1>
-
-<%= render 'form', mcategory: @mcategory %>
-
-<%= link_to 'Back', mcategories_path %>
+<div class="form-container1">
+  <div class="form-container2">
+    <h1>New Category</h1>
+    <%= render 'form', mcategory: @mcategory %>
+  </div>
+</div>
