--- a/app/views/mlocations/new.html.erb
+++ b/app/views/mlocations/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Location</h1>
-
-<%= render 'form', mlocation: @mlocation %>
-
-<%= link_to 'Back', mlocations_path %>
+<div class="form-container1">
+  <div class="form-container2">
+    <h1>New Location</h1>
+    <%= render 'form', mlocation: @mlocation %>
+  </div>
+</div>
