--- a/app/views/mlocations/show.html.erb
+++ b/app/views/mlocations/show.html.erb
@@ -2,7 +2,9 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @mlocation.name %>
+  <% if current_user.id == @mlocation.user_id %>
+    <%= @mlocation.name %>
+  <% end %>
 </p>
 
 <%= link_to 'Edit', edit_mlocation_path(@mlocation) %> |
