--- a/app/views/mtypes/show.html.erb
+++ b/app/views/mtypes/show.html.erb
@@ -5,5 +5,7 @@
   <%= @mtype.name %>
 </p>
 
+<%= render 'mtypes/table' %>
+
 <%= link_to 'Edit', edit_mtype_path(@mtype) %> |
 <%= link_to 'Back', mtypes_path %>
