--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,9 +11,9 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <!-- <li class="nav-item active">
         <a class="nav-link" href="<%= new_mentry_path %>">New Entry <span class="sr-only">(current)</span></a>
-      </li>
+      </li> -->
       <!-- <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li> -->
@@ -24,7 +24,9 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <% Maccount.all.each do |maccount| %>
-          <%= link_to maccount.name, maccount_path(maccount.id), class: "dropdown-item" %>
+            <% if current_user.id == maccount.user_id %>
+              <%= link_to maccount.name, maccount_path(maccount.id), class: "dropdown-item" %>
+            <% end %>
           <% end %>
         </div>
       </li>
