--- a/app/views/maccounts/_form.html.erb
+++ b/app/views/maccounts/_form.html.erb
@@ -17,6 +17,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "Create Account" %>
+    <%= form.submit "Create Account", class: "btn btn-outline-success my-2 my-sm-0" %>
   </div>
 <% end %>
