--- a/app/views/maccounts/new.html.erb
+++ b/app/views/maccounts/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Account</h1>
-
-<%= render 'form', maccount: @maccount %>
-
-<%= link_to 'Back', maccounts_path %>
+<div class="form-container1">
+  <div class="form-container2">
+    <h1>New Account</h1>
+    <%= render 'form', maccount: @maccount %>
+  </div>
+</div> 
