--- a/app/views/mentries/index.html.erb
+++ b/app/views/mentries/index.html.erb
@@ -1,13 +1,21 @@
 <p id="notice"><%= notice %></p>
 
-<%= form_tag(mentries_path, :method => "get", id: "search-form", class: "form-inline my-2 my-lg-0") do %>
- <%= text_field_tag :search, params[:search], placeholder: "Search", class: 'form-control' %>
-    <span class="input-group-btn">
-      <%= submit_tag "Search", class: 'btn btn-outline-success my-2 my-sm-0' %>
-    </span>
-<% end %>
+<div class="form-container1">
+    <div class="form-container2">
+        <%= form_tag(mentries_path, :method => "get", id: "search-form", class: "form-inline my-2 my-lg-0") do %>
+         <%= text_field_tag :search, params[:search], placeholder: "Search Categories", class: 'form-control' %>
+            <span class="input-group-btn">
+              <%= submit_tag "Search", class: 'btn btn-outline-success my-2 my-sm-0' %>
+            </span>
+        <% end %>
+        <div class="white-space"></div>
+        <%= link_to 'Clear Search', mentries_path %>
+    </div>
+</div>
 
-<%= link_to 'Clear Search', mentries_path %>
+<div class="white-space">
+
+</div>
 
 <h1>Entries</h1>
 <%= render 'dashboard/entries' %>
