--- a/app/views/mstatuses/new.html.erb
+++ b/app/views/mstatuses/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Mstatus</h1>
-
-<%= render 'form', mstatus: @mstatus %>
-
-<%= link_to 'Back', mstatuses_path %>
+<div class="form-container1">
+  <div class="form-container2">
+    <h1>New Mstatus</h1>
+    <%= render 'form', mstatus: @mstatus %>
+  </div>
+</div>
