--- a/app/views/mtypes/new.html.erb
+++ b/app/views/mtypes/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Mtype</h1>
-
-<%= render 'form', mtype: @mtype %>
-
-<%= link_to 'Back', mtypes_path %>
+<div class="form-container1">
+  <div class="form-container2">
+    <h1>New Transaction Type</h1>
+    <%= render 'form', mtype: @mtype %>
+  </div>
+</div>
