charts fade out and in when new entry is made.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,7 +8,10 @@
         <%= render 'mentries/form', mentry: @mentry %>
       </div>
       <div class="col">
-        <%= render 'dashboard/piechart' %>
+        <div class="pie-div">
+          <%= render 'dashboard/piechart' %>
+        </div>
+
         <div class="white-space">
 
         </div>
